JBO : Mise en place KickstartBootstrap

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -53,3 +53,25 @@ typeMismatch.java.lang.Long=Property {0} must be a valid number
 typeMismatch.java.lang.Short=Property {0} must be a valid number
 typeMismatch.java.math.BigDecimal=Property {0} must be a valid number
 typeMismatch.java.math.BigInteger=Property {0} must be a valid number
+
+# Navigation principale
+default.welcome.title=Welcome to {0}
+default.info.title=Info
+default.about.button=About
+default.about.title=About {0}
+default.contact.button=Contact
+default.contact.title=Contact
+default.contact.address=Address
+default.systeminfo.button=System Info
+default.systeminfo.title=System Info
+default.systeminfo.resources=Used Resources
+default.systeminfo.status=Application Status
+default.systeminfo.plugins=Installed Plugins
+default.dbconsole.button=H2 Database Console
+
+# Choix des Langues
+default.language.button=Language
+default.language.english=English
+default.language.german=German
+default.language.spanish=Spanish
+default.language.french=French
