--- a/grails-app/i18n/messages_fr.properties
+++ b/grails-app/i18n/messages_fr.properties
@@ -35,7 +35,27 @@ default.updated.message={0} {1} mis à jour
 default.deleted.message={0} {1} supprimé
 default.not.deleted.message={0} {1} non supprimé
 
+# Navigation principale
+default.welcome.title=Bienvenue dans {0}
+default.info.title=Info
+default.about.button=A sujet de
+default.about.title=A sujet de {0}
+default.contact.button=Contact
+default.contact.title=Contact
+default.contact.address=Adresse
+default.systeminfo.button=System Info
+default.systeminfo.title=System Info
+default.systeminfo.resources=Ressources utilisées
+default.systeminfo.status=Etat de l'application
+default.systeminfo.plugins=Plugins Installés
+default.dbconsole.button=H2 Database Console
 
+# Choix des Langues
+default.language.button=Langue
+default.language.english=Anglais
+default.language.german=Allemand
+default.language.spanish=Espagnol
+default.language.french=Français
 
 # Login errors
 springSecurity.errors.login.expired=Désolé, votre compte a expiré.
